2009-03-11
Changed db_file::cleanup() to use LEFT and LOCATE instead of REGEXP

2009-03-10
Fixed some searching and sorting problems in the db_files module
Fixed the fs_module::out() methods to work with new convention
Made db_playlist use standard db_file search functionality
Fixed some problems with accessing the ignored and watched files since db_file module regexp changes

2009-03-09
Made searched terms highlight on select page
Worked on db_file module and fixed some search functionality

2009-03-06
Fixed zip template, crc() can work with a file pointer, still working on bt.php plugin which uses md5
Improved searching capabilities in db_file

2009-03-04
Worked on db_playlist module, mostly working just needs some tweaks

2009-03-03
Added db_alias module to handle the aliases, although it is semi-incomplete
module::out() methods can only remove header declarations, they cannot set them, that is controlled by the plugin that calls it
Cron now doesn't clean or scan when a directory is unmounted or missing
Site now completely directory separator independant, it stores all files with / in between directories and all system calls replace the / with DIRECTORY_SEPARATOR

2009-03-02
Made cleanup more efficient by creating a THREASHOLD constant for how many times the cron should run before cleaning up
Also cleanup will fire when physical directories are changed and it is detected by the db_watch_list module, so they will no longer clean up when just adding new files to database
Found that vlc has even more transcoding errors when the bitrate is being downscaled, this may screw up the client player responsiveness
Fixed a problem with the db_watch_list module, if a directory in the db_watch list was searched but was never removed, it would recurse that directory infinitely
Set the site up so it can be run minimalistically across a network share
Fixed some issues with cron.php and common.php